Fix giraffe icon

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       "サル": "monkey"
     };
 
-    // 正解とするアイコン（※「キリン」については、ここでは代用として🐼を使用）
+    // 正解とするアイコン
     const animalMapping = {
       dog: "🐕",
       cat: "🐈",
@@ -94,13 +94,13 @@
       elephant: "🐘",
       lion: "🦁",
       fox: "🦊",
-      giraffe: "🐼",
+      giraffe: "🦒",
       zebra: "🦓",
       monkey: "🐒"
     };
 
     // 使用する全10種のアイコン（正解に出るもの以外のデコイも含む）
-    const icons = ["🐕", "🐈", "🐇", "🐘", "🦁", "🦊", "🦓", "🐒", "🐼", "🐷"];
+    const icons = ["🐕", "🐈", "🐇", "🐘", "🦁", "🦊", "🦓", "🐒", "🦒", "🐷"];
 
     let currentRound = 0;
     let score = 0;
